fixed by adding wrap in order to grow property to work

--- a/014_layout_with_flexbox/03_Hands-On_Exercises/3_six_flex_items/main.css
+++ b/014_layout_with_flexbox/03_Hands-On_Exercises/3_six_flex_items/main.css
@@ -21,12 +21,14 @@
 .container_3,
 .container_5{
 align-items: center;   
+flex-wrap: wrap;
 }
 
 .container_2,
 .container_4,
 .container_6{    
 align-items: flex-end;
+flex-wrap: wrap;
 }
 
 /* Overwrite align-items property */
